Bug 1329117 - Run HonorUserPreferencesForTrackSelection at stable state. r=jwwang, a=ritu

MozReview-Commit-ID: FwZyHHFa8KD

--HG--
extra : source : a5ab036af9607056790796732b406738d36d4da2